--- a/team/index.html
+++ b/team/index.html
@@ -89,9 +89,9 @@
                         <img src="../assets/images/chanchal.svg" alt="Chanchal Saini">
                     </div>
                     <div class="member-info-large">
-                        <h3>Chanchal Saini</h3>
+                        <h3>Shreya</h3>
                         <p class="position">Partner & Senior Developer</p>
-                        <p class="bio">Chanchal Saini brings extensive expertise in backend development and database architecture to The GDevelopers team. With a background in computer science and 7 years of industry experience, Chanchal has developed robust systems that power some of the most demanding applications in the fintech and healthcare sectors.</p>
+                        <p class="bio">Shreya brings extensive expertise in backend development and database architecture to The GDevelopers team. With a background in computer science and 7 years of industry experience, Chanchal has developed robust systems that power some of the most demanding applications in the fintech and healthcare sectors.</p>
                         <p class="bio">Known for his methodical approach to problem-solving and attention to detail, Chanchal ensures that all projects meet the highest standards of performance, security, and code quality. He is particularly passionate about mentoring junior developers and fostering a culture of excellence within the team.</p>
                         <div class="social-links">
                             <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
