--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                         <img src="assets/images/chanchal.svg" alt="Chanchal Saini">
                     </div>
                     <div class="member-info">
-                        <h3>Chanchal Saini</h3>
+                        <h3>Shreya C.</h3>
                         <p class="position">Partner & Senior Developer</p>
                         <p class="bio">Expert in backend development and database optimization with a focus on scalable systems.</p>
                         <div class="social-links">
